[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siglip-tester"
description = "Image - Text Correlation Tester Application with the SigLIP Model"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.1.0"
dependencies = [
    "torch",
    "transformers",
    "streamlit",
    "sentencepiece",
    "watchdog",
]